scripts/nullaway/wpi/urlc7e4b8c1f2_normchan_craps_simulator_tgz-pJ8-normchan_crapssim_SimulatorJ8.txt
../wpi/urlc7e4b8c1f2_normchan_craps_simulator_tgz-pJ8-normchan_crapssim_SimulatorJ8/src/normchan/crapssim/Simulator.java:63: error: [NullAway] dereferenced expression manager.getPlayer().getStrategy() is @Nullable
            System.out.println(TOTAL_SIMULATION_RUNS + " runs complete with " + manager.getPlayer().getStrategy().getClass().getSimpleName() + ".");
                                                                                                                 ^
    (see http://t.uber.com/nullaway )
../wpi/urlc7e4b8c1f2_normchan_craps_simulator_tgz-pJ8-normchan_crapssim_SimulatorJ8/src/normchan/crapssim/simulation/strategy/ProgressiveRollStrategy.java:69: error: [NullAway] dereferenced expression layout.getPassLine() is @Nullable
                    startBalance = player.getBalance() + layout.getPassLine().getMainBet();
                                                                             ^
    (see http://t.uber.com/nullaway )
../wpi/urlc7e4b8c1f2_normchan_craps_simulator_tgz-pJ8-normchan_crapssim_SimulatorJ8/src/normchan/crapssim/simulation/strategy/ProgressiveComeOutHedgeStrategy10.java:50: error: [NullAway] dereferenced expression comeBets is @Nullable
            addBet(new AnySeven(layout, player, (int) (0.5 * unitSize * comeBets.size())));
                                                                                ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: ../wpi/urlc7e4b8c1f2_normchan_craps_simulator_tgz-pJ8-normchan_crapssim_SimulatorJ8/src/normchan/crapssim/Simulator.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
3 errors
